# tg-uq-generalization-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: tg.yaml
data/: README.md
runs/tg_cms_v4/: run_meta.json
runs/tg_cms_v4/data/: dataset_meta.json  processed.csv  raw.csv
runs/tg_cms_v4/metrics/: results.csv  shap_top_features_xgb.csv  similarity_fixed.csv  similarity_test_to_train.csv  summary_frac1_alpha.csv
runs/tg_cms_v4/splits/: b7ed245a5b6d1726_cluster_c0.20_seed42_k5.json  b7ed245a5b6d1726_cluster_c0.20_seed43_k5.json  b7ed245a5b6d1726_cluster_c0.20_seed44_k5.json  b7ed245a5b6d1726_cluster_c0.30_seed42_k5.json  b7ed245a5b6d1726_cluster_c0.30_seed43_k5.json  b7ed245a5b6d1726_cluster_c0.30_seed44_k5.json  b7ed245a5b6d1726_cluster_c0.40_seed42_k5.json  b7ed245a5b6d1726_cluster_c0.40_seed43_k5.json  b7ed245a5b6d1726_cluster_c0.40_seed44_k5.json  b7ed245a5b6d1726_scaffold_seed42_k5.json  b7ed245a5b6d1726_scaffold_seed43_k5.json  b7ed245a5b6d1726_scaffold_seed44_k5.json  b7ed245a5b6d1726_stratified_seed42_k5.json  b7ed245a5b6d1726_stratified_seed43_k5.json  b7ed245a5b6d1726_stratified_seed44_k5.json
scripts/: reproduce_oof.py  run_all.py  run_benchmark.py
src/cms_tg/: config.py  data.py  eval.py  features.py  metrics.py  plots.py  shap_analysis.py  similarity.py  splits.py  uncertainty.py  utils.py
src/cms_tg/models/: svr_model.py  xgb_model.py
