[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cms-tg"
version = "0.4.0"
description = "Uncertainty-aware polymer Tg pipeline with OOD splits, similarity diagnostics, multi-model baselines, and SHAP"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
